Integrate License API and MSAL authentication
Replaced mock license data with API integration in LicenseTable, added error handling and improved UI. Introduced LicenseTable/api.ts for API calls. Updated AuthContext to use MSAL authentication and access token retrieval. Wrapped App in MsalProvider in main.tsx. Updated .env.example with real Azure and API config.

--- a/compliance-frontend/.env.example
+++ b/compliance-frontend/.env.example
@@ -1,10 +1,10 @@
 # Azure AD Configuration
-VITE_AZURE_CLIENT_ID=your-azure-client-id-here
-VITE_AZURE_AUTHORITY=https://login.microsoftonline.com/your-tenant-id-here
+VITE_AZURE_CLIENT_ID=2a339fbf-acaf-474d-b84a-fd259ef15860
+VITE_AZURE_AUTHORITY=https://login.microsoftonline.com/7313ad10-b885-4b50-9c75-9dbbd975618f
 
 # API Configuration  
-VITE_API_BASE_URL=https://your-api-base-url.com
-
+# VITE_API_BASE_URL=https://your-api-base-url.com
+VITE_API_BASE_URL=http://localhost:3000
 # Azure Intelligence Services
 VITE_AZURE_INTELLIGENCE_ENDPOINT=https://your-intelligence-endpoint.cognitiveservices.azure.com
 VITE_AZURE_INTELLIGENCE_KEY=your-intelligence-api-key-here
