--- a/compliance-frontend/package.json
+++ b/compliance-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@azure/msal-browser": "^4.22.1",
     "@azure/msal-react": "^3.0.19",
+    "@azure/storage-blob": "^12.28.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
