Add Incidents feature with UI and context
Introduces the Incidents management feature, including API mapping documentation, context provider, Incidents page, table, and edit/view dialog components. Updates navigation and routes to include Incidents, and adds related dependencies (date-fns, MUI updates).

--- a/compliance-frontend/.env.example
+++ b/compliance-frontend/.env.example
@@ -8,3 +8,7 @@ VITE_API_BASE_URL=http://localhost:3000
 # Azure Intelligence Services
 VITE_AZURE_INTELLIGENCE_ENDPOINT=https://your-intelligence-endpoint.cognitiveservices.azure.com
 VITE_AZURE_INTELLIGENCE_KEY=your-intelligence-api-key-here
+
+# Azure Functions Configuration for Accounts Service
+VITE_AZURE_FUNCTIONS_URL=https://your-function-app.azurewebsites.net/api
+VITE_AZURE_FUNCTIONS_KEY=your-function-key-here
