--- a/compliance-frontend/package.json
+++ b/compliance-frontend/package.json
@@ -19,10 +19,11 @@
     "@mui/lab": "^7.0.0-beta.17",
     "@mui/material": "^7.3.2",
     "@mui/x-data-grid": "^8.11.2",
-    "@mui/x-date-pickers": "^8.11.2",
+    "@mui/x-date-pickers": "^8.12.0",
     "@types/node": "^24.3.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.12.1",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
